# Football-MCP-Server

./: .gitignore  README.md  main.py  pyproject.toml
server/: Dockerfile  footy.json  footy.py  footyclient.py  requirements.txt
