[project]
name = "footy-mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.8",
    "mcp-use>=1.3.1",
    "mcp[cli,inspector]>=1.9.4",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
]
